--- a/MitosisTimesheet/src/main/webapp/html/account.html
+++ b/MitosisTimesheet/src/main/webapp/html/account.html
@@ -45,8 +45,8 @@
     <div class="form-group">
       <label class="control-label col-sm-2">Email Address:</label>
       <div class="col-sm-10 col-md-4 col-lg-4 profile-value">  
-        <span class="span-profile"> {{email}}</span>        
-        <input class="form-control edit-profile" type="text" required ng-model="email">
+        <span class="span-profile"> {{eMail}}</span>        
+        <input class="form-control edit-profile" type="text" required ng-model="eMail">
       </div>
     </div>
     <div class="form-group">
