--- a/MitosisTimesheet/src/main/webapp/html/authority.html
+++ b/MitosisTimesheet/src/main/webapp/html/authority.html
@@ -17,8 +17,8 @@
     
         </ul>
       <ul class="nav navbar-nav navbar-right">
-        <li class="lb-username"><lable>Welcome Administrator</lable></li>
-      
+        <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
+       <li><a style="padding-left: 0;" ui-sref="account"><button class="btn btn-sm btn-primary">Account</button></a></li>
         <li><button class="btn btn-sm btn-primary btn-logout" ng-click="logout();">Logout</button></li>
       </ul>
     </div>
