--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -62,6 +62,7 @@
     <script src="js/controllers/teamreportController.js"></script>
     <script src="js/controllers/leaveDetailsController.js"></script>
     <script src="js/controllers/customerDetailsController.js"></script>
+    <script src="js/controllers/headerController.js"></script>
 </head>
 <body>
 <body ng-app="myApp" style="background: #f2f2f2;">
