--- a/MitosisTimesheet/src/main/webapp/html/project.html
+++ b/MitosisTimesheet/src/main/webapp/html/project.html
@@ -46,7 +46,7 @@
      </div>
 	<div class="form-group">
     <select id="customer" class="form-control select" required ng-model="customer" ng-options="item as item.customerName for item in customerlist"  style="color: #777777;">
-    <option value="">Customer</option>
+    <option value="" selected disabled>Customer</option>
     </select> 
     </div>
     <div class="form-group" style="word-spacing: 0;">
