commit for style.css changes

--- a/MitosisTimesheet/src/main/webapp/html/customerDetails.html
+++ b/MitosisTimesheet/src/main/webapp/html/customerDetails.html
@@ -106,7 +106,7 @@
 			</td>
 			<td>
 			    <span ng-show="!showEdit">{{sheet.address}}</span>
-				<span ng-show="showEdit" >​<textarea id="txtArea" ng-model="sheet.address" class="form-control" style="margin-top:-20px;"></textarea></span>
+				<span ng-show="showEdit" >​<textarea id="txtArea" ng-model="sheet.address" class="form-control txtarea"></textarea></span>
 			</td>
 			<td>
 			    <span ng-show="!showEdit">{{sheet.skypeId}}</span>
