--- a/MitosisTimesheet/src/main/webapp/html/customerDetails.html
+++ b/MitosisTimesheet/src/main/webapp/html/customerDetails.html
@@ -48,7 +48,7 @@
        <input type="text"  id="customerMail" class="form-control" ng-model="customer.email" ng-blur="mailValidation()" placeholder="Email">
     </div>
     <div class="form-group" style="word-spacing: 0;">
-    <input type="text" class="form-control" ng-model="customer.address" placeholder="Address">
+       <textarea rows="1" class="form-control" ng-model="customer.address" placeholder="Address"></textarea>
 	</div>
 	<div class="form-group" style="word-spacing: 0;">
     <input type="text"  class="form-control" ng-model="customer.skypeId" placeholder="SkypeId">
@@ -61,6 +61,9 @@
 	</div>
 	<div class="form-group" style="word-spacing: 0;">
     <input type="text"  class="form-control" ng-model="customer.website" placeholder="Website">
+	</div>
+	<div class="form-group" style="word-spacing: 0;">
+    <input type="text"  class="form-control" ng-model="customer.fax" placeholder="Fax">
 	</div>
 	<div class="form-group" style="word-spacing: 0;">
     <!-- <span for="dropdown"  style="font-size: 20px;">Project Status</span> -->
@@ -90,6 +93,7 @@
 			<th class="">Phone</th>
 			<th class="">Mobile</th>
 			<th class="">Website</th>
+			<th class="">Fax</th>
 			<th class="">Status</th>
 		    <th></th>
 		</tr>
@@ -124,6 +128,12 @@
 			    <span ng-show="!showEdit">{{sheet.website}}</span>
 				<span ng-show="showEdit" ><input class="form-control"  type="text" ng-model="sheet.website" ></span>
 			</td>
+		
+			<td>
+			    <span ng-show="!showEdit">{{sheet.fax}}</span>
+				<span ng-show="showEdit" ><input class="form-control"  type="text" ng-model="sheet.fax" ></span>
+			</td>
+			
 			<td>
 				<span ng-show="!showEdit">{{sheet.status}}</span>
 				<span ng-show="showEdit">
