commit for chnages in customer active inactive

--- a/MitosisTimesheet/src/main/webapp/html/customerDetails.html
+++ b/MitosisTimesheet/src/main/webapp/html/customerDetails.html
@@ -87,7 +87,7 @@
 	<thead class="thead-mit-ts" >
 		<tr>
 			<th class="">Customer Name</th>
-			<th class="">Email</th>
+			<th style="text-align: center">Email</th>
 			<th class="">Address</th>
 			<th class="">SkypeId</th>
 			<th class="">Phone</th>
