--- a/MitosisTimesheet/src/main/webapp/html/leaveDetails.html
+++ b/MitosisTimesheet/src/main/webapp/html/leaveDetails.html
@@ -14,7 +14,14 @@
     <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
          <li ng-class="{ active: isActive('/leaveDetails')}"><a ui-sref="leave">Home</a></li>
+          <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li><a ui-sref="leavereport">Leave Report</a></li>
+          </ul>
+        </li>
         </ul>
+        
+        
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
         <li><a style="padding-left: 0;" ui-sref="account"><button class="btn btn-sm btn-primary">Account</button></a></li>
@@ -62,6 +69,7 @@
 			<th class="">From Date</th>
 			<th class="">To Date</th>
 		    <th class="">Reason</th>
+		    <th class="">No of days</th>
 		    <th></th>
 		</tr>
 	</thead>
@@ -89,6 +97,10 @@
 			<td >
 				<span ng-show="!showEdit">{{sheet.reason}}</span>
 				<span ng-show="showEdit"><textarea rows="1" class="form-control" type="text" ng-model="sheet.reason"></textarea></span>
+			</td>
+			<td>
+			<span ng-show="!showEdit">{{sheet.noOfDays}}</span>
+				<span ng-show="showEdit"><input class="form-control" type="text" ng-model="sheet.noOfDays" readonly></span>
 			</td>
 			<td style="word-spacing: 15px;">
 				<a><span class="glyphicon glyphicon-pencil" ng-click="showEdit = !showEdit" ng-show="!showEdit"></span></a>
