--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -64,6 +64,7 @@
     <script src="js/controllers/customerDetailsController.js"></script>
     <script src="js/controllers/headerController.js"></script>
     <script src="js/controllers/leaveReportController.js"></script>
+    <script src="js/controllers/employeeMasterController.js"></script>
 </head>
 <body>
 <body ng-app="myApp" style="background: #f2f2f2;">
