commit for rights to employee master

--- a/MitosisTimesheet/src/main/webapp/html/authority.html
+++ b/MitosisTimesheet/src/main/webapp/html/authority.html
@@ -37,7 +37,8 @@
 			<th>Active</th>
 		    <th>Manage Project</th>
 		    <th>Manage Team</th>
-		    <th>Manage Customer</th>		    
+		    <th>Manage Cust</th>
+		    <th>Manage Emp</th>		    
 		    <th></th>
 		</tr>
 	</thead>
@@ -50,6 +51,7 @@
 			<td><input type="checkbox"  name="myTextEditBox" ng-model="sheet.manageProject" /></td>
 			<td><input type="checkbox"  name="myTextEditBox" ng-model="sheet.manageTeam"/></td>
 			<td><input type="checkbox"  name="myTextEditBox" ng-model="sheet.manageCustomer"/></td>
+			<td><input type="checkbox"  name="myTextEditBox" ng-model="sheet.manageEmployees"/></td>
 			<td><button  class="btn btn-primary btn-xs" type="button" ng-click="update(sheet)">Save</button></td>
 		</tr>
 	</tbody>
