--- a/MitosisTimesheet/src/main/webapp/html/leaveDetails.html
+++ b/MitosisTimesheet/src/main/webapp/html/leaveDetails.html
@@ -13,7 +13,7 @@
     </div>
     <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
-         <li ng-class="{ active: isActive('/leaveDetails')}"><a ui-sref="leave">Home</a></li>
+         <li ng-class="{ active: isActive('/leaveDetails')}"><a ui-sref="leaveDetails">Home</a></li>
           <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a ui-sref="leavereport">Leave Report</a></li>
