commit for employee master validation

--- a/MitosisTimesheet/src/main/webapp/html/account.html
+++ b/MitosisTimesheet/src/main/webapp/html/account.html
@@ -57,14 +57,14 @@
          <input class="form-control edit-profile" type="text" required ng-model="username" readonly>
       </div>
     </div>
-     <div class="form-group">        
+    <!--  <div class="form-group">        
       <div class="col-sm-offset-2 col-sm-10">
         <button type="button" class="btn btn-primary btn-xs btn-profile-edit">
 	    <span class="glyphicon glyphicon-pencil"></span> Edit
 	    </button>
 	    <input type="submit" class="btn btn-primary btn-xs btn-profile-save" value="Save"></input>
 	    <input type="button" class="btn btn-primary btn-xs btn-profile-cancel" ng-click="cancel()" value="Cancel"></input>
-      </div>
+      </div> -->
     </div>
     <hr style="border: grey;">
     <div class="col-xs-12" style="margin-top: 20px;"><p style="float: left;  margin-right: 20px; padding-top: 5px; ">To Change Password Click</p><button type="button" class="btn btn-primary btn-xs btn-pwdchange">
