--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -15,7 +15,7 @@
 <link rel="stylesheet" href="css/ajax-loader.css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
-<link rel="stylesheet" href="css/jquery.edittable.min.css">
+<link rel="stylesheet" href="css/jquery.edittable.css">
 <link rel="stylesheet" href="css/style.css">
 <!-- <link rel="stylesheet" href="css/bootstrap-combined.min.css"> --> 
 <!-- End Css -->
@@ -37,7 +37,7 @@
 	<script type="text/javascript" src="js/angular/ngStorage.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/jquery-ui.js" ></script>
 	<script src="js/angular/angular-ui-router.min.js"></script>
-	<script type="text/javascript" src="js/jquery/jquery.edittable.min.js"></script>
+	<script type="text/javascript" src="js/jquery/jquery.edittable.js"></script>
 	<script data-require="ng-table@*" data-semver="0.3.1" src="js/angular/ng-table.js"></script>
 	<script src="//angular-ui.github.io/bootstrap/ui-bootstrap-tpls-0.13.0.js"></script>
 	<script src="js/datepicker.js" type="text/javascript"></script>
@@ -65,6 +65,7 @@
     <script src="js/controllers/headerController.js"></script>
     <script src="js/controllers/leaveReportController.js"></script>
     <script src="js/controllers/employeeMasterController.js"></script>
+    <script src="js/controllers/invoiceDetailsController.js"></script>
 </head>
 <body>
 <body ng-app="myApp" style="background: #f2f2f2;">
