commit for leavedetails changes

--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -66,6 +66,7 @@
     <script src="js/controllers/leaveReportController.js"></script>
     <script src="js/controllers/employeeMasterController.js"></script>
     <script src="js/controllers/invoiceDetailsController.js"></script>
+    <script src="js/controllers/levelMasterController.js"></script>
 </head>
 <body>
 <body ng-app="myApp" style="background: #f2f2f2;">
