--- a/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/employeeMaster.html
@@ -1,4 +1,3 @@
-
 <div ng-init="list()">
 <nav class="navbar navbar-inverse navbar-fixed-top" style="border-bottom: 1px solid gray; background: none;">
   <div class="container-fluid" style="max-width: 100%; background: grey; color: white;">
@@ -13,11 +12,25 @@
     <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
         <li ng-class="{ active: isActive('/timesheet')}"><a ui-sref="timesheet">Home</a></li>
-        <li ng-show="manageProject" ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
+         <li ng-show="manageFinance" ng-class="{ active: isActive('/finance')}"><a class="dropdown-toggle" data-toggle="dropdown"> Finance<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
+            <li><a ui-sref="">Invoice</a></li>
+            <li><a ui-sref="">Receipt</a></li>
+             <li><a ui-sref="">Bank</a></li>
+              <li><a ui-sref="">Company Info</a></li>
+          </ul>
+        </li>
+          <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
+     <li ng-show="manageProject" ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
         <li ng-show="manageTeam" ng-class="{ active: isActive('/teamAssignment')}"><a ui-sref="teamAssignment">Team Assignment</a></li>
-        <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
          <li ng-show="manageEmployees" ng-class="{ active: isActive('/employeeMaster')}"><a ui-sref="employeeMaster">Employee Master</a></li>
-        <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
+       <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
+        <ul class="dropdown-menu">
+            <li><a ui-sref="individualreport" >Individual Reports</a></li>
+            <li><a ui-sref="teamreport">Team Reports</a></li>
+          </ul>
+        </li>
         </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
@@ -66,16 +79,17 @@
 </div>
 </div>
 <div class="container" style="width: 100%;">
+<div class="table-responsive">
 <table class="table">
 	<thead class="thead-mit-ts">
 		<tr>
 			<th>Emp Id</th>
 			<th>First Name</th>
 			<th>Last Name</th>
-			<th style="width: 100px;">Joined Date</th>
-			<th style="width: 110px;">Exp Start Date</th>
-			<th style="width: 100px;">Years of Exp</th>
-			<th style="width: 115px;">Months of Exp</th>
+			<th>Joined Date</th>
+			<th>Exp Start Date</th>
+			<th>Years of Exp</th>
+			<th>Months of Exp</th>
 			<th>Level</th>
 			<th>As on Date</th>
 			<th>Billable</th>
@@ -147,7 +161,7 @@
 </table>
 <button class="btn btn-primary" ng-click="calculateAndUpdateExp()">Update Experience</button>
 <pagination total-items="totalItems" ng-model="currentPage" max-size="maxSize" items-per-page="numPerPage" class="pagination-sm" boundary-links="true"></pagination>
-
+</div>
 </div>
  <div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
  <div class="alert-msg1 col-xs-12 col-sm-6"><p class="alert-danger"></p></div>
