commit for changes in html

--- a/MitosisTimesheet/src/main/webapp/html/project_invoice.html
+++ b/MitosisTimesheet/src/main/webapp/html/project_invoice.html
@@ -23,10 +23,10 @@
         <li ng-show="manageFinance" ng-show="manageFinance" ng-class="{ active: isActive('/finance')}"><a class="dropdown-toggle" data-toggle="dropdown"> Finance<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
-            <li><a ui-sref="">Invoice</a></li>
+            <!-- <li><a ui-sref="">Invoice</a></li>
             <li><a ui-sref="">Receipt</a></li>
-             <li><a ui-sref="">Bank</a></li>
-              <li><a ui-sref="">Company Info</a></li>
+             <li><a ui-sref="">Bank Reconcile</a></li>
+              <li><a ui-sref="">Company Info</a></li> -->
           </ul>
         </li>
           <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
