--- a/MitosisTimesheet/src/main/webapp/html/levelMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/levelMaster.html
@@ -15,10 +15,10 @@
          <li ng-show="manageFinance" ng-class="{ active: isActive('/finance')}"><a class="dropdown-toggle" data-toggle="dropdown"> Finance<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
-            <li><a ui-sref="">Invoice</a></li>
+            <!-- <li><a ui-sref="">Invoice</a></li>
             <li><a ui-sref="">Receipt</a></li>
-             <li><a ui-sref="">Bank</a></li>
-              <li><a ui-sref="">Company Info</a></li>
+             <li><a ui-sref="">Bank Reconcile</a></li>
+              <li><a ui-sref="">Company Info</a></li> -->
           </ul>
         </li>
           <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
@@ -72,7 +72,7 @@
 </div>
 </div>
 <div class="container" style="width: 100%;">
-<div class="table-responsive">
+
 <table class="table">
 	<thead class="thead-mit-ts">
 		<tr>
@@ -140,7 +140,6 @@
      </tfoot>
 </table>
 <button class="btn btn-primary" ng-click="calculateAndUpdateEstimation()">Compute</button>
-</div>
 
 </div>
  <div class="alert-msg col-xs-12 col-sm-6"><p class="alert-success"></p></div>
