commit for level master changes

--- a/MitosisTimesheet/src/main/webapp/html/levelMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/levelMaster.html
@@ -81,7 +81,7 @@
 			<th>Level</th>
 			<th>Rate/Hour ($)</th>
 			<th>Hours/Month</th>
-			<th>No., Of Emp</th>
+			<th>Billable Emp</th>
 			<th>Total Amount ($)</th>
 			<th></th>
 		</tr>
