commit for header changes

--- a/MitosisTimesheet/src/main/webapp/html/individualreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/individualreport.html
@@ -45,7 +45,7 @@
 <div ng-controller="individualreportController" class="container" style="margin-top: 7%;">
 	<div class="row">
 	<div class="col-xs-12">
-	<h2 style="text-align: center;">Individual Report generation</h2>
+	<h2 class="text-center">Individual Report generation</h2>
 	</div>
 	</div>
 	<form class="form-inline" role="form">
