--- a/MitosisTimesheet/src/main/webapp/html/levelMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/levelMaster.html
@@ -41,7 +41,7 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2>Monthly Revenue Projection</h2></div></div></div>
+<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">Monthly Revenue Projection</h2></div></div></div>
 <div class="container" style="width: 100%;">
 <div class="level-form-div">
 
