--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -43,7 +43,7 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2>Timesheet</h2></div></div></div>
+<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">Timesheet</h2></div></div></div>
 
 <div class="container" style="width: 100%;">
 <div class="row">
