--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -68,6 +68,7 @@
     <script src="js/controllers/invoiceDetailsController.js"></script>
     <script src="js/controllers/levelMasterController.js"></script>
     <script src="js/controllers/companyInfoController.js"></script>
+    <script src="js/controllers/projectCostDetailsController.js"></script>
 </head>
 <body>
 <body ng-app="myApp" style="background: #f2f2f2;">
