--- a/MitosisTimesheet/src/main/webapp/html/authority.html
+++ b/MitosisTimesheet/src/main/webapp/html/authority.html
@@ -25,7 +25,7 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top: 8%; margin-bottom: 2%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 style="margin-left: 35%;">User Rights</h2></div></div></div>
+<div class="container" style="margin-top: 8%; margin-bottom: 2%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">User Rights</h2></div></div></div>
 
 <div  class="container" style="width: 100%;">
 <div class="table-responsive">
