--- a/MitosisTimesheet/src/main/webapp/html/leaveDetails.html
+++ b/MitosisTimesheet/src/main/webapp/html/leaveDetails.html
@@ -31,7 +31,7 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top: 5%;"><div class="row"><div class="col-xs-12 col-md-12"><h2>Leave Entry</h2></div></div></div>
+<div class="container" style="margin-top: 5%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">Leave Entry</h2></div></div></div>
 <div class="container" style="width: 100%;">
 <div class="leave-form-div">
 <form class="form-inline" role="form" id="leaveEntry" ng-submit="insertLeaveEntry(fromDate,toDate,reason)">		
