--- a/MitosisTimesheet/src/main/webapp/html/teamAssignment.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamAssignment.html
@@ -43,7 +43,7 @@
   </div>
 </nav>
 
-<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2>Team Assignment</h2></div></div></div>
+<div class="container" style="margin-top: 8%;"><div class="row"><div class="col-xs-12 col-md-12"><h2 class="text-center">Team Assignment</h2></div></div></div>
 <div class="container" style="width: 100%;">
 <div class="teamassgn-form-div">
 <form class="form-inline project-form" role="form" id="addEntry" ng-submit="validateAssignment()">		
