--- a/MitosisTimesheet/src/main/webapp/html/teamreport.html
+++ b/MitosisTimesheet/src/main/webapp/html/teamreport.html
@@ -45,7 +45,7 @@
 <div class="container" style="margin-top: 7%;">
 	<div class="row">
 	<div class="col-xs-12">
-	<h2 style="text-align: center;">Team Report generation</h2>
+	<h2 class="text-center">Team Report generation</h2>
 	</div>
 	</div>
 	<form class="form-inline" role="form">
