CompanyInfo Url Updation

--- a/MitosisTimesheet/src/main/webapp/html/levelMaster.html
+++ b/MitosisTimesheet/src/main/webapp/html/levelMaster.html
@@ -15,6 +15,7 @@
          <li ng-show="manageFinance" ng-class="{ active: isActive('/finance')}"><a class="dropdown-toggle" data-toggle="dropdown"> Finance<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
+           <li><a ui-sref="company_info">Company Information</a></li>
             <!-- <li><a ui-sref="">Invoice</a></li>
             <li><a ui-sref="">Receipt</a></li>
              <li><a ui-sref="">Bank Reconcile</a></li>
