--- a/MitosisTimesheet/src/main/webapp/html/customerDetails.html
+++ b/MitosisTimesheet/src/main/webapp/html/customerDetails.html
@@ -17,12 +17,13 @@
        <li ng-show="manageFinance" ng-class="{ active: isActive('/finance')}"><a class="dropdown-toggle" data-toggle="dropdown"> Finance<span class="caret"></span></a>
         <ul class="dropdown-menu">
             <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
+            <li><a ui-sref="company_info">Company Information</a></li>
             <!-- <li><a ui-sref="">Invoice</a></li>
             <li><a ui-sref="">Receipt</a></li>
              <li><a ui-sref="">Bank Reconcile</a></li>
               <li><a ui-sref="">Company Info</a></li> -->
           </ul>
-        </li>
+          </li>
           <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
      <li ng-show="manageProject" ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
         <li ng-show="manageTeam" ng-class="{ active: isActive('/teamAssignment')}"><a ui-sref="teamAssignment">Team Assignment</a></li>
