--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -15,10 +15,11 @@
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
         <li ng-class="{ active: isActive('/timesheet')}"><a ui-sref="timesheet">Home</a></li>
         <li ng-show="manageFinance" ng-class="{ active: isActive('/finance')}"><a class="dropdown-toggle" data-toggle="dropdown"> Finance<span class="caret"></span></a>
+        
         <ul class="dropdown-menu">
             <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
           <li><a ui-sref="company_info">Company Information</a></li>
-           <!--  <li><a ui-sref="">Invoice</a></li>
+            <li><a ui-sref="invoice">Invoice</a></li>
             <li><a ui-sref="">Receipt</a></li>
              <li><a ui-sref="">Bank Reconcile</a></li>
               <li><a ui-sref="">Company Info</a></li> -->
