--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -19,10 +19,10 @@
         <ul class="dropdown-menu">
             <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
           <li><a ui-sref="company_info">Company Information</a></li>
-            <li><a ui-sref="invoice">Invoice</a></li>
+           <!--  <li><a ui-sref="invoice">Invoice</a></li>
             <li><a ui-sref="">Receipt</a></li>
              <li><a ui-sref="">Bank Reconcile</a></li>
-              <li><a ui-sref="">Company Info</a></li> -->
+              <li><a ui-sref="">Company Info</a></li>  -->
           </ul>
         </li>
           <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
@@ -36,12 +36,16 @@
           </ul>
         </li>
         </ul>
-      <ul class="nav navbar-nav navbar-right">
-        <li class="lb-username"><lable ng-model="name">Welcome {{name}}</lable></li>
-        <li><a style="padding-left: 0;" ui-sref="account"><button class="btn btn-sm btn-primary">Account</button></a></li>
-        <li><button class="btn btn-sm btn-primary btn-logout" ng-click="logout();">Logout</button></li>
-      </ul>
+      
     </div>
+    <section class="jtr">
+		<span class="cp" onclick="show_hide()">
+		<img class="opt" style="height: 50px; width: 50px; border-radius: 50%;" src="images/user.jpg"></img></span> 
+		<section id="acc_opt">
+		<span ng-model="name">{{name}}</span>
+		<a ui-sref="account">Account</a>
+		<a ng-click="logout();">Logout</a>
+		</section></section>
   </div>
 </nav>
 
