commit for changes in html

--- a/MitosisTimesheet/src/main/webapp/html/timesheet.html
+++ b/MitosisTimesheet/src/main/webapp/html/timesheet.html
@@ -19,6 +19,7 @@
         <ul class="dropdown-menu">
             <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
           <li><a ui-sref="company_info">Company Information</a></li>
+          <li><a ui-sref="projectCostDetails">Project Cost Details</a></li>
            <!--  <li><a ui-sref="invoice">Invoice</a></li>
             <li><a ui-sref="">Receipt</a></li>
              <li><a ui-sref="">Bank Reconcile</a></li>
