--- a/MitosisTimesheet/src/main/webapp/index.html
+++ b/MitosisTimesheet/src/main/webapp/index.html
@@ -17,6 +17,7 @@
 <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.4/themes/smoothness/jquery-ui.css">
 <link rel="stylesheet" href="css/jquery.edittable.css">
 <link rel="stylesheet" href="css/style.css">
+<link rel="icon" type="image/png" href="images/mit_logo_new.png" />
 <!-- <link rel="stylesheet" href="css/bootstrap-combined.min.css"> --> 
 <!-- End Css -->
 
