--- a/MitosisTimesheet/src/main/webapp/html/authority.html
+++ b/MitosisTimesheet/src/main/webapp/html/authority.html
@@ -9,7 +9,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <div class="logo"><img src="images/mit_lg-ts.jpg"></div>
+      <div class="logo"><img src="images/logo2.png"></div>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
