--- a/MitosisTimesheet/src/main/webapp/html/company_info.html
+++ b/MitosisTimesheet/src/main/webapp/html/company_info.html
@@ -8,7 +8,7 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <div class="logo"><img src="images/mit_lg-ts.jpg"></div>
+      <div class="logo"><img src="images/logo2.png"></div>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
@@ -17,9 +17,9 @@
         <ul class="dropdown-menu">
             <li><a ui-sref="levelMaster">Monthly Revenue Projection</a></li>
             <li><a ui-sref="company_info">Company Information</a></li>
-           <li><a ui-sref="projectCostDetails">Project Cost Details</a></li>
-            <!-- <li><a ui-sref="">Invoice</a></li>
-            <li><a ui-sref="">Receipt</a></li>
+           <li><a ui-sref="projectCostDetails">Project Cost </a></li>
+             <li><a ui-sref="invoice">Invoice</a></li>
+            <!-- <li><a ui-sref="">Receipt</a></li>
              <li><a ui-sref="">Bank Reconcile</a></li>
               <li><a ui-sref="">Company Info</a></li> -->
           </ul>
