--- a/MitosisTimesheet/src/main/webapp/html/leavereport.html
+++ b/MitosisTimesheet/src/main/webapp/html/leavereport.html
@@ -8,14 +8,11 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>                        
       </button>
-      <div class="logo"><img src="images/mit_lg-ts.jpg"></div>
+      <div class="logo"><img src="images/logo2.png"></div>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar" ng-controller="HeaderController">
       <ul class="nav navbar-nav" style="margin-left: 30px; margin-top: 8px;">
         <li ng-class="{ active: isActive('/leaveDetails')}"><a ui-sref="leaveDetails">Home</a></li>
-       <li ng-show="manageProject" ng-class="{ active: isActive('/project')}"><a ui-sref="project">Project Details</a></li>
-        <li ng-show="manageTeam" ng-class="{ active: isActive('/teamAssignment')}"><a ui-sref="teamAssignment">Team Assignment</a></li>
-      <li ng-show="manageCustomer" ng-class="{ active: isActive('/customerDetails')}"><a ui-sref="customerDetails">Customer Details</a></li>
        <li ng-class="{ active: isActive('/reports')}"><a class="dropdown-toggle" data-toggle="dropdown"> Reports<span class="caret"></span></a>
          <ul class="dropdown-menu">
             <li><a ui-sref="leavereport">Leave Report</a></li>
